--- a/Leccion 1/index.html
+++ b/Leccion 1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mi primer pagina el HTML </title>
+        <title>Mi primer pagina en HTML </title>
     </head>
 
     <body>  
